@@ -16,6 +16,7 @@ getTopTaxa(
   top = 5L,
   method = c("mean", "sum", "median"),
   abund_values = "counts",
+  na.rm = TRUE,
   ...
 )
 
@@ -24,6 +25,7 @@ getTopTaxa(
   top = 5L,
   method = c("mean", "sum", "median", "prevalence"),
   abund_values = "counts",
+  na.rm = TRUE,
   ...
 )
 
@@ -50,6 +52,9 @@ median or prevalence. Default is 'mean'.}
 \item{abund_values}{a \code{character} value to select an
 \code{\link[SummarizedExperiment:SummarizedExperiment-class]{assayNames}}
 By default it expects count data.}
+
+\item{na.rm}{For \code{getTopTaxa} logical argument for calculation method
+specified to argument \code{method}. Default is TRUE.}
 
 \item{...}{Additional arguments passed on to \code{agglomerateByRank()} when
 \code{rank} is specified for \code{countDominantTaxa}.}
